--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top">
+    <section class="top flexible-container">
         <div class="janker">
 
             <h1>Assalaamo Alikom</h1>
@@ -32,7 +32,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="janker">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -44,6 +44,33 @@
             <a class="link-button" target="_blank" href="https://ansb.xyz/">DOWNLOAD RESUME</a>
         </div>
     </section>
+
+    <section class="experiences">
+        <h1>Experiences </h1>
+
+        <div class="flexible-container">
+            <div class="janker-b">
+                <h2> Full Stack Web Developer</h2>
+                <h3 class="color">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div class="janker-c">
+                <h2>Baby Web Developer</h2>
+                <h3 class="color">2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Bin-Amin 2022, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
