--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 
             <h1>Assalaamo Alikom</h1>
             <h1><span class="color">Bin AMin </span> World!</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
-                work.
-                That's why I am learning and mastering web development. I will not stop until I become the Web
-                Development
-                Hero.</p>
-            <a class="link-button" target="_blank" href="https://ansb.xyz/">HIRE ME</a>
+            <h3>As a web developer, I'm just starting my journey </h3>
+            <p>I am a Qawmi Madrasa student and I am a Quran Hafez and I have a dream that I am a web developer. And my
+                companion programming hero in this journey
+                And on the right is the photo of my master Mahbub Sir, And you will pray for me, thank you all</p>
+            <a class="link-button" target="_blank" href="https://ansb.xyz/">CONTACT SIR</a>
 
         </div>
 
@@ -51,7 +49,7 @@
         <div class="flexible-container">
             <div class="janker-b">
                 <h2> Full Stack Web Developer</h2>
-                <h3 class="color">2022-Present | Pro Level Developer</h3>
+                <h3 class="color">2023-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
@@ -69,7 +67,7 @@
 
     </section>
     <footer>
-        <p>© Bin-Amin 2022, a Programming Hero initiative.</p>
+        <p>© Bin-Amin 2023, a Programming Hero initiative.</p>
     </footer>
 
 </body>
